src/objects/External_Identifier__c.object
<CustomObject>
    <fields>
        <fullName>Attribute_1__c</fullName>
        <label>Attribute 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_2__c</fullName>
        <label>Attribute 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_ID_1__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Combination of the government Id &amp; Zip code</description>
        <externalId>true</externalId>
        <label>External SF ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Some countries have multiple addresses attached to one government Id, therefore this will act as the plain government Id and External ID 1 will act as the unique Id in SF</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>First_Name__c&amp;&quot; &quot;&amp;Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Visiting_City__c</fullName>
        <label>Visiting City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visiting_Country__c</fullName>
        <label>Visiting Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visiting_Street__c</fullName>
        <label>Visiting Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visiting_Zip_Postal_Code__c</fullName>
        <label>Visiting Zip/Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>External Identifier</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>External_ID__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Visiting_Zip_Postal_Code__c</columns>
        <columns>Visiting_City__c</columns>
        <columns>Visiting_Street__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Identifiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>